atualizacao do  css das paginas home e lista de compras

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -11,6 +11,13 @@ body {
     padding-right: 15px;
 }
 
+.nav-btn-bottom {
+    position:absolute;
+    bottom:71px;
+}
+
+
+
 /* Set widths on the form inputs since otherwise they're 100% wide */
 input,
 select,
