Inclusão da lógica de login

--- a/Site.master
+++ b/Site.master
@@ -59,12 +59,12 @@
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a runat="server" href="~/Account/Register"><span class="glyphicon glyphicon-user"></span> Registrar</a></li>
-                                <li><a runat="server" href="~/Account/Login"><span class="glyphicon glyphicon-log-out"></span> Log in</a></li>
+                                <li><a runat="server" href="~/Login"><span class="glyphicon glyphicon-log-out"></span> Log in</a></li>
                             </ul>
                         </AnonymousTemplate>
                         <LoggedInTemplate>
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a runat="server" href="~/Account/Manage" title="Manage your account">Hello, <%: Context.User.Identity.GetUserName()  %>!</a></li>
+                                <li><a runat="server" href="~/Account/Manage" title="Manage your account">Olá, <%: Context.User.Identity.GetUserName()  %>!</a></li>
                                 <li>
                                     <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/" OnLoggingOut="Unnamed_LoggingOut" />
                                 </li>
